minute and hour done--humanReadable

--- a/src/components/expression_result/expresult.module.css
+++ b/src/components/expression_result/expresult.module.css
@@ -2,7 +2,7 @@
     font-family: Georgia, serif;
 }
 .result_container{
-    height: 100px;
+    min-height: 100px;
     margin: 20px auto;
     width: 40%;
 }
