--- a/src/components/rules/rules.module.css
+++ b/src/components/rules/rules.module.css
@@ -1,3 +1,11 @@
-.border{
-    border-bottom: solid 1px black  ;
+.border {
+  border-bottom: solid 1px black;
+  list-style-type: none;
+  padding: 5px 20px;
+  text-align: center;
+}
+.rules_ul {
+  margin: 0;
+  padding: 0;
+  min-width: 250px;
 }
