--- a/prod_build/main.css
+++ b/prod_build/main.css
@@ -180,6 +180,19 @@ a{
 }
 
 
+._2jrOWkog-FZb8-CtXaJrej{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Georgia, serif;
+}
+.lXpEYJPD2oDUIvcSyX6xh{
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+  
+
 ._3qE8CVJXf4gwEvoRwlOxys{
     display: flex;
     flex-direction: column;
